MDEV-29092 FOREIGN_KEY_CHECKS does not prevent non-copy alter from creating invalid FK structure

Problem:
========
- InnoDB should have two keys on the same column for the self
referencing foreign key relation. Inplace alter algorithm allows
to drop the index if there is only one key for the self referencing
foreign key and it leads to invalid foreign key table structure.

Solution:
=========
When foreign_key_check is enabled, InnoDB shouldn't allow
to drop index if there is no suitable key for self referencing
foreign key relation.